# ducc-fft-par-demo

./: CMakeLists.txt
bench/: CMakeLists.txt  bench-code.inl  bench-ducc-fft-par.cpp  bench-ducc-original.cpp  bench.cpp
demo/: CMakeLists.txt  demo.cpp
ducc-fft-par/: CMakeLists.txt  LICENSE.txt
ducc-fft-par/ducc-par/fft/: fft.h  fft1d_impl.h  fft_inst1.cc  fft_inst2.cc  fft_inst_inc.h  fftnd_impl.h
ducc-fft-par/ducc-par/infra/: aligned_array.h  error_handling.h  mav.cc  mav.h  misc_utils.h  simd.h  string_utils.cc  string_utils.h  threading.cc  threading.h  useful_macros.h
ducc-fft-par/ducc-par/math/: cmplx.h  unity_roots.h
ducc-fft-par/ducc0/fft/: fft.h  fft1d_impl.h  fft_inst_inc.h  fftnd_impl.h
ducc-fft-par/ducc0/infra/: mav.h  simd.h
